--- a/calculator.htm
+++ b/calculator.htm
@@ -4,7 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/calculator.css">
+    <style>
+        *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-content:center;
+}
+.main-conatiner{
+    width: 550px;
+    height: 650px;
+    border: 1px solid black;
+    border-radius: 10px;
+   
+}
+.header{
+    height: 150px;
+    width: 450px;
+    /* border: 1px solid red; */
+    margin-left: 2.9rem;
+    margin-top: 2rem;
+    border-radius: 10px;
+    background-color: aquamarine;
+     box-shadow:
+  3px 3px red,
+  -1em 0 0.4em olive;
+}
+
+.grid-container{
+    display: grid;
+    height:calc(600px - 150px);
+    width: 550px;
+    grid-template-columns: repeat(4,100px);
+        grid-template-rows: repeat(5,70px);
+   gap: 1rem;
+       place-content:center;
+  
+}
+.box{
+   display: grid;
+    place-content:center;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: antiquewhite;
+    border-radius: 10px;
+   box-shadow:
+  3px 3px red,
+  -1em 0 0.4em olive;
+}
+
+#box19{
+    grid-column-start: 3;
+    grid-column-end: 5;
+
+}
+#box1,#box2,#box3,#box4,#box8,#box12,#box16,#box19{
+    background-color: darkorange;
+}
+
+
+
+
+
+
+
+    </style>
 </head>
 <body>
     <div class="main-conatiner">
